style: 引入 Spotless + palantir-java-format 并统一全项目代码格式
- 在 buildSrc 中添加 Spotless 7.0.3 依赖
- 在 service-conventions 中配置 palantir-java-format (4空格)
- 配置 importOrder、trimTrailingWhitespace、endWithNewline
- check 任务依赖 spotlessCheck
- 一次性格式化所有模块的 Java 源码（约 450 文件）
- 纯格式变更，无行为修改

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>